[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "camel-up-solver"
version = "0.1.1"
description = "Terminal decision-support REPL and EV solver for Camel Up"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Mehul Arora", email = "aroramehul8@gmail.com"}]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Games/Entertainment :: Board Games",
]

[project.urls]
Homepage = "https://github.com/mehularora8/camel-up"

[project.scripts]
camelup = "camel_up.repl:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["camel_up*"]
